--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             <div class="work__block">
               <picture>
                 <source srcset="./images/our_work/work-2x-img_1.jpg 2x">
-                <img width="370" height="294" src="./images/our_work/work-1x-img_1.jpg" alt="example what we do 1" />
+                <img width="370" src="./images/our_work/work-1x-img_1.jpg" alt="example what we do 1" />
               </picture>
               <p class="work__text">Десктопные приложения</p>
             </div>
@@ -143,7 +143,7 @@
             <div class="work__block">
               <picture>
                 <source srcset="./images/our_work/work-2x-img_2.jpg 2x">
-                <img width="370" height="294" src="./images/our_work/work-1x-img_2.jpg" alt="example what we do 2" />
+                <img width="370" src="./images/our_work/work-1x-img_2.jpg" alt="example what we do 2" />
               </picture>
               <p class="work__text">Мобильные приложения</p>
             </div>
@@ -152,7 +152,7 @@
             <div class="work__block">
               <picture>
                 <source srcset="./images/our_work/work-2x-img_3.jpg 2x">
-                <img width="370" height="294" src="./images/our_work/work-1x-img_3.jpg" alt="example what we do 3" />
+                <img width="370" src="./images/our_work/work-1x-img_3.jpg" alt="example what we do 3" />
               </picture>
               <p class="work__text">Дизайнерские решения</p>
             </div>
