--- a/portfolio.html
+++ b/portfolio.html
@@ -335,7 +335,7 @@
 
   <footer class="footer footer--text-color">
     <div class="container footer__container">
-      <div class="footer-contacts">
+      <div class="footer-contacts footer-grid">
         <a class="link footer-contacts__site-name" lang="en" href=""><span
             class="navigation__text--color">Web</span>Studio</a>
         <address class="flex-address">
@@ -351,7 +351,7 @@
           </ul>
         </address>
       </div>
-      <div class="footer-socials">
+      <div class="footer-socials footer-grid">
         <h2 class="footer__join-section">Присоединяйтесь</h2>
         <ul class="list socials-list">
           <li class="socials-list__item footer-social-icons">
@@ -385,7 +385,7 @@
         </ul>
       </div>
 
-      <div class="sign-in">
+      <div class="sign-in footer-grid">
         <h2 class="footer__join-section">Подпишитесь на рассылку</h2>
         <form name="subscribe-form" class="footer__form">
           <input type="text" name="email" class="footer__mail" id="user-email" placeholder="E-mail">
