--- a/index.html
+++ b/index.html
@@ -48,47 +48,47 @@
   </header>
 
   <!-- <div class="mobile-overlay is-hidden"> -->
-    <div class="mobile-menu" data-menu>
-      <ul class="list mobile-menu-nav">
-        <li class="mobile-menu-nav__item"><a class="link mobile-menu-nav__link current mobile-current"
-            href="./index.html">Студия</a></li>
-        <li class="mobile-menu-nav__item"><a class="link mobile-menu-nav__link" href="./portfolio.html">Портфолио</a>
-        </li>
-        <li class="mobile-menu-nav__item"><a class="link mobile-menu-nav__link" href="">Контакты</a></li>
-      </ul>
-      <ul class="list mobile-navigation-contact">
-        <li class="mobile-navigation-contact__item">
-          <a class="link mobile-navigation-contact__link" href="tel:+380961111111">
-            +38 096 111 11 11</a>
-        </li>
-        <li class="mobile-navigation-contact__item">
-          <a class="link mobile-navigation-contact__link" href="mailto:info@devstudio.com">
-            info@devstudio.com</a>
-        </li>
-      </ul>
-      <ul class="list mobile-socials">
-        <li class="mobile-socials__item">
-          <a aria-label="Instagram" href="" class="mobile-socials__link" target="_blank" rel="noopener norefferrer">
-            Instagram
-          </a>
-        </li>
-        <li class="mobile-socials__item">
-          <a aria-label="Twitter" href="" class="mobile-socials__link" target="_blank" rel="noopener norefferrer">
-            Twitter
-          </a>
-        </li>
-        <li class="mobile-socials__item">
-          <a aria-label="Facebook" href="" class="mobile-socials__link" target="_blank" rel="noopener norefferrer">
-            Facebook
-          </a>
-        </li>
-        <li class="mobile-socials__item">
-          <a aria-label="LinkedIn" href="" class="mobile-socials__link" target="_blank" rel="noopener norefferrer">
-            LinkedIn
-          </a>
-        </li>
-      </ul>
-    </div>
+  <div class="mobile-menu" data-menu>
+    <ul class="list mobile-menu-nav">
+      <li class="mobile-menu-nav__item"><a class="link mobile-menu-nav__link current mobile-current"
+          href="./index.html">Студия</a></li>
+      <li class="mobile-menu-nav__item"><a class="link mobile-menu-nav__link" href="./portfolio.html">Портфолио</a>
+      </li>
+      <li class="mobile-menu-nav__item"><a class="link mobile-menu-nav__link" href="">Контакты</a></li>
+    </ul>
+    <ul class="list mobile-navigation-contact">
+      <li class="mobile-navigation-contact__item">
+        <a class="link mobile-navigation-contact__link" href="tel:+380961111111">
+          +38 096 111 11 11</a>
+      </li>
+      <li class="mobile-navigation-contact__item">
+        <a class="link mobile-navigation-contact__link" href="mailto:info@devstudio.com">
+          info@devstudio.com</a>
+      </li>
+    </ul>
+    <ul class="list mobile-socials">
+      <li class="mobile-socials__item">
+        <a aria-label="Instagram" href="" class="mobile-socials__link" target="_blank" rel="noopener norefferrer">
+          Instagram
+        </a>
+      </li>
+      <li class="mobile-socials__item">
+        <a aria-label="Twitter" href="" class="mobile-socials__link" target="_blank" rel="noopener norefferrer">
+          Twitter
+        </a>
+      </li>
+      <li class="mobile-socials__item">
+        <a aria-label="Facebook" href="" class="mobile-socials__link" target="_blank" rel="noopener norefferrer">
+          Facebook
+        </a>
+      </li>
+      <li class="mobile-socials__item">
+        <a aria-label="LinkedIn" href="" class="mobile-socials__link" target="_blank" rel="noopener norefferrer">
+          LinkedIn
+        </a>
+      </li>
+    </ul>
+  </div>
   <!-- </div> -->
 
   <main>
@@ -501,39 +501,41 @@
       <form name="modal-window" class="form">
         <h3 class="modal__header-text">Оставьте свои данные, мы вам перезвоним</h3>
         <div class="list">
-            <div class="form__field">
-              <label for="user-name" class="form__label">Имя</label>
-              <input type="text" class="form__input" name="modal-user-name" id="user-name">
-              <svg class="icon form__icon" width="12" height="12">
-                <use href="./images/sprite.svg#icon-modal-name"></use>
-              </svg>
-            </div>
-            <div class="form__field">
-              <label for="user-phone" class="form__label">Телефон</label>
-              <input type="tel" class="form__input" name="modal-user-phone" id="user-phone">
-              <svg class="icon form__icon" width="13" height="13">
-                <use href="./images/sprite.svg#icon-modal-phone"></use>
-              </svg>
-            </div>
-            <div class="form__field">
-              <label for="user-mail" class="form__label">Почта</label>
-              <input type="email" class="form__input" name="modal-user-mail" id="user-mail">
-              <svg class="icon form__icon" width="15" height="12">
-                <use href="./images/sprite.svg#icon-modal-mail"></use>
-              </svg>
-            </div>
-            <div class="form__field">
-              <label for="commentary-input" class="form__label modal-comment">Комментарии</label>
-              <textarea name="modal-commentary" id="commentary-input" rows="6" placeholder="Введите текст"></textarea>
-            </div>
+          <div class="form__field">
+            <label for="user-name" class="form__label">Имя</label>
+            <input type="text" class="form__input" name="modal-user-name" id="user-name">
+            <svg class="icon form__icon" width="12" height="12">
+              <use href="./images/sprite.svg#icon-modal-name"></use>
+            </svg>
+          </div>
+          <div class="form__field">
+            <label for="user-phone" class="form__label">Телефон</label>
+            <input type="tel" class="form__input" name="modal-user-phone" id="user-phone">
+            <svg class="icon form__icon" width="13" height="13">
+              <use href="./images/sprite.svg#icon-modal-phone"></use>
+            </svg>
+          </div>
+          <div class="form__field">
+            <label for="user-mail" class="form__label">Почта</label>
+            <input type="email" class="form__input" name="modal-user-mail" id="user-mail">
+            <svg class="icon form__icon" width="15" height="12">
+              <use href="./images/sprite.svg#icon-modal-mail"></use>
+            </svg>
+          </div>
+          <div class="form__field">
+            <label for="commentary-input" class="form__label modal-comment">Комментарии</label>
+            <textarea name="modal-commentary" id="commentary-input" rows="6" placeholder="Введите текст"></textarea>
+          </div>
         </div>
-        <label for="modal-checkbox" class="form__agreement">
-          <input type="checkbox" name="modal-checkbox" id="modal-checkbox" class="form__checkbox visually-hidden">
-          <svg class="icon form__checkbox-icon" width="16" height="15">
-          </svg>
-          <span class="form__agreement-text">Соглашаюсь с рассылкой и принимаю</span>
-          <a href="" class="form__modal-link">Условия договора</a>
-        </label>
+        <div class="form__checkbox">
+          <label for="modal-checkbox" class="form__agreement">
+            <input type="checkbox" name="modal-checkbox" id="modal-checkbox" class="form__checkbox visually-hidden">
+            <svg class="icon form__checkbox-icon" width="16" height="15">
+            </svg>
+            <span class="form__agreement-text">Соглашаюсь с рассылкой и принимаю</span>
+            <a href="" class="form__modal-link">Условия договора</a>
+          </label>
+        </div>
         <button type="submit" class="form__button">Отправить</button>
 
       </form>
